--- a/main project/package.json
+++ b/main project/package.json
@@ -14,10 +14,10 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-kakao-maps-sdk": "^1.1.27",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "redux-persist": "^6.0.0",
     "sass": "^1.83.4"
   },
   "devDependencies": {
