--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "redux-persist": "^6.0.0",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
